--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -31,7 +31,7 @@ body{
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(37, 127, 55, 0.275);
+  background: rgba(255, 0, 0, 0.275);
   animation: animate 25s linear infinite;
   bottom: -150px;
   
@@ -42,6 +42,7 @@ body{
   width: 80px;
   height: 80px;
   animation-delay: 0s;
+  background: rgba(163, 244, 101, 0.275);
 }
 
 
@@ -51,6 +52,7 @@ body{
   height: 20px;
   animation-delay: 2s;
   animation-duration: 12s;
+  background: rgba(98, 0, 255, 0.275);
 }
 
 .circles li:nth-child(3){
@@ -58,6 +60,7 @@ body{
   width: 20px;
   height: 20px;
   animation-delay: 4s;
+  background: rgba(2, 238, 255, 0.334);
 }
 
 .circles li:nth-child(4){
@@ -66,6 +69,7 @@ body{
   height: 60px;
   animation-delay: 0s;
   animation-duration: 18s;
+  background: rgba(158, 243, 0, 0.54);
 }
 
 .circles li:nth-child(5){
@@ -73,6 +77,7 @@ body{
   width: 20px;
   height: 20px;
   animation-delay: 0s;
+  background: rgba(179, 0, 255, 0.447);
 }
 
 .circles li:nth-child(6){
@@ -80,6 +85,7 @@ body{
   width: 110px;
   height: 110px;
   animation-delay: 3s;
+  background: rgba(255, 0, 0, 0.418);
 }
 
 .circles li:nth-child(7){
@@ -87,6 +93,7 @@ body{
   width: 150px;
   height: 150px;
   animation-delay: 7s;
+  background: rgba(25, 19, 36, 0.533);
 }
 
 .circles li:nth-child(8){
@@ -95,6 +102,7 @@ body{
   height: 25px;
   animation-delay: 15s;
   animation-duration: 45s;
+  background: rgba(117, 67, 122, 0.852);
 }
 
 .circles li:nth-child(9){
@@ -103,6 +111,7 @@ body{
   height: 15px;
   animation-delay: 2s;
   animation-duration: 35s;
+  background: rgba(69, 105, 59, 0.966);
 }
 
 .circles li:nth-child(10){
@@ -111,6 +120,7 @@ body{
   height: 150px;
   animation-delay: 0s;
   animation-duration: 11s;
+  background: rgba(32, 69, 100, 0.673);
 }
 
 
@@ -129,4 +139,43 @@ body{
       border-radius: 50%;
   }
 
+}
+
+.page-controls{
+  width: 50%;
+  padding: 10px;
+  margin: 0 auto;
+  background: rgba(253, 126, 0, 0.57);
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+}
+
+.page-controls button{
+  padding: 10px;
+}
+
+.pdf-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // margin: 10px 0;
+  // padding: 10px;
+}
+
+.pdf-container-document{
+  width: 100%;
+  max-width: calc(100% - 2em);
+  margin: 1em 0;
+}
+
+.fonts{
+  width: 100%;
+  max-width: calc(100% - 2em);
+  margin: 1em 0;
+}
+
+.topic-controls{
+  display: flex;
 }
