Added some margins and paddings around the breadcrumb and the horizontal line. Also changed the coloring of the search bar input so that it is more visible now.

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -8,8 +8,11 @@ body{
 }
 
 hr{
-  height: 2px;
-  background: 1px solid black;
+  border-color: black;
+  border-bottom: none;
+  border-style: dashed;
+  border-width: 2px;
+  margin-bottom: 20px;
 }
 
 .pdf-container{
