I'm still working on the bookmarks feature. It's still incomplete and there's a lot of work to do. Currently just pushing the code for testing purposes.

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,6 +1,7 @@
 *{
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 body{
@@ -10,8 +11,13 @@ body{
 hr{
   border-color: black;
   border-bottom: none;
-  border-style: dashed;
   border-width: 2px;
   margin-bottom: 20px;
 }
+
+// .page-wrapper{
+//   position: relative;
+// }
+
+
 
